--- a/OS-Core/Cargo.toml
+++ b/OS-Core/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] } 
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 sbi-rt = { version = "0.0.2", features = ["legacy"] }
+buddy_system_allocator = "0.9"
