--- a/OS-Core/Cargo.toml
+++ b/OS-Core/Cargo.toml
@@ -10,3 +10,5 @@ riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 sbi-rt = { version = "0.0.2", features = ["legacy"] }
 buddy_system_allocator = "0.9"
+bitflags = "2.4.1"
+xmas-elf = "0.9.1"
