--- a/user/Cargo.toml
+++ b/user/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] } 
 buddy_system_allocator = "0.9"
+bitflags = "2.4.1"
